# ffmpeg_demo

./: .gitignore  CMakeLists.txt
src/: main.cpp
test/camera/: mac_open_camera.cpp
test/rtmp/: test_rtmp_pusher.cpp  test_rtmp_pusher.h
